# FRBAS

./: AttendanceProject.spec  DataClasses.py  LICENSE  README.md  __init__.py  hodLogin.py  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  studentRegistration.py  teacherLogin.py
src/AttendanceProject/: AttendanceProject.py  ConnectionManager.py  hodHome.py  hodRegistration.py  setup.py  teacherRegistration.py
src/AttendanceProject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/AttendanceProjectModule/: Attendance.py  __init__.py  hodHome.py  hodLogin.py  metadata.json  teacherHome.py  teacherLogin.py
