[metadata]
name = AttendanceProject
version = 1.0.0.0
author = Yash Salunke
author_email = yash3a@gmail.com
description = Face Recognition based Attendance System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yashsalunke/FRBAS
project_urls =
    Bug Tracker = https://github.com/yashsalunke/FRBAS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src